[dependencies]
regex = "1.0"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]

[package]
authors = ["https://github.com/machinefabric"]
description = "Tagged URN - Flat tag-based identifier system"
edition = "2021"
license = "MIT"
name = "tagged-urn"
version = "0.36.110"
